<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semibold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
        android:id="@+id/roundKornerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blueLight"
        app:corner_radius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/blueLight">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginBottom="-10dp"
                android:contentDescription="@string/title_null"
                android:src="@drawable/img_doctor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:text="@string/dec_title_home"
                android:textColor="@color/textHead"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tab_layout_background"
        app:layout_constraintTop_toBottomOf="@+id/roundKornerLinearLayout"
        app:tabBackground="@drawable/tab_layout_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabMode="scrollable"
        app:tabPaddingEnd="16dp"
        app:tabPaddingStart="16dp"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/textHead">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabmakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GLOBAL" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabinfaq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COUNTRY" />


    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>